Change to apache URIBuilder